qwen-tts-ascend-sys/target/debug/build/qwen-tts-ascend-sys-08097bd28ad6d4f7/out/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct qwen_tts_ctx {
    _unused: [u8; 0],
}
pub type qwen_tts_ctx_t = qwen_tts_ctx;
unsafe extern "C" {
    #[doc = " Load all TTS models from a GGUF directory.\n\n model_dir: directory containing qwen_tts_talker.gguf, qwen_tts_talker_llama*.gguf,\n            qwen_tts_code_predictor.gguf, qwen_tts_tokenizer_*.gguf,\n            qwen_tts_speaker_encoder.gguf (optional), vocab.json, merges.txt\n tokenizer_dir: directory with vocab.json + merges.txt (NULL = same as model_dir)\n talker_override: override talker llama GGUF path (NULL = auto from model_dir)\n cp_override: override code predictor llama GGUF path (NULL = auto)\n n_gpu_layers: layers to offload to NPU (29 = all for 1.7B)\n n_threads: CPU threads\n\n Returns: context handle, or NULL on failure."]
    pub fn qwen_tts_load(
        model_dir: *const ::std::os::raw::c_char,
        tokenizer_dir: *const ::std::os::raw::c_char,
        talker_override: *const ::std::os::raw::c_char,
        cp_override: *const ::std::os::raw::c_char,
        n_gpu_layers: ::std::os::raw::c_int,
        n_threads: ::std::os::raw::c_int,
    ) -> *mut qwen_tts_ctx_t;
}
unsafe extern "C" {
    #[doc = " Free all resources."]
    pub fn qwen_tts_free(ctx: *mut qwen_tts_ctx_t);
}
unsafe extern "C" {
    #[doc = " Get model hidden size (typically 2048)."]
    pub fn qwen_tts_hidden_size(ctx: *const qwen_tts_ctx_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Get codec vocabulary size (typically 3072)."]
    pub fn qwen_tts_vocab_size(ctx: *const qwen_tts_ctx_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Check if speaker encoder is loaded (Base model only)."]
    pub fn qwen_tts_has_speaker_encoder(ctx: *const qwen_tts_ctx_t) -> ::std::os::raw::c_int;
}
#[doc = " Parameters for qwen_tts_synthesize().\n\n Mirrors the fields of QwenTTSParams (see qwen_tts.h) actually consumed by\n QwenTTS::generate(). Mode is inferred from which fields are populated:\n   mode=\"icl\"         → ref_audio_path + ref_text\n   mode=\"xvec\"        → ref_audio_path (.wav auto-extracts to .xvec tempfile)\n   mode=\"customvoice\" → speaker (built-in voice id resolved via voices.json)\n\n Zero-defaulted sampling fields use the same defaults as the qwen_tts\n CLI / Python reference. Set any field to its \"use default\" sentinel to\n fall through."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct qwen_tts_synth_params_t {
    pub text: *const ::std::os::raw::c_char,
    pub ref_audio_path: *const ::std::os::raw::c_char,
    pub ref_text: *const ::std::os::raw::c_char,
    pub ref_lang: *const ::std::os::raw::c_char,
    pub target_lang: *const ::std::os::raw::c_char,
    pub mode: *const ::std::os::raw::c_char,
    pub speaker: *const ::std::os::raw::c_char,
    pub seed: ::std::os::raw::c_int,
    pub max_tokens: ::std::os::raw::c_int,
    pub temperature: f32,
    pub top_k: ::std::os::raw::c_int,
    pub top_p: f32,
    pub repetition_penalty: f32,
    pub cp_groups: ::std::os::raw::c_int,
    pub cp_layers: ::std::os::raw::c_int,
    pub greedy: ::std::os::raw::c_int,
}
unsafe extern "C" {
    #[doc = " One-shot text-to-speech synthesis.\n\n Dispatches to QwenTTS::generate() with params populated from the mode\n field. Library allocates the output PCM buffer via malloc() (size is\n unknown up front); caller MUST release it with qwen_tts_pcm_free().\n\n pcm_out:       [out] pointer receiving the malloc()'d f32 buffer (24kHz mono)\n n_samples_out: [out] number of float samples written\n\n Returns 0 on success. On any error, *pcm_out is set to NULL and\n *n_samples_out is set to 0. Error codes:\n   -1: ctx or params was NULL\n   -2: unknown mode\n   -3: generation failed"]
    pub fn qwen_tts_synthesize(
        ctx: *mut qwen_tts_ctx_t,
        params: *const qwen_tts_synth_params_t,
        pcm_out: *mut *mut f32,
        n_samples_out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Release a PCM buffer returned by qwen_tts_synthesize().\n\n Equivalent to free(pcm). Safe to call with NULL (no-op)."]
    pub fn qwen_tts_pcm_free(pcm: *mut f32);
}
